--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -54,9 +54,7 @@
                     <ul id="list-container">
                         <!-- List items will be added here -->
                     </ul>
-                    <!--COME BACK ASAP <button id="compare-button" class="compare-button" onclick="compareItems()" style="display: block;">Compare</button>-->
-                    <button id="compare-button" class="compare-button" onclick="redirectToComingSoon()" style="display: block;">Compare</button>
-
+                    <button id="compare-button" class="compare-button" onclick="compareItems()" style="display: block;">Compare</button>
                 </div>
             </div>
             <div class="preferences-section">
@@ -98,7 +96,7 @@
         <div class="category-container">
             {% for category in categories %}
                 <a href="{{ url_for('category_page', category_name=category.name) }}" class="category-item">
-                    <!--Desactivate it for a moment!!!
+                    <!--!!! Delete temporarily !!!
                     <img src="{{ url_for('static', filename='images/Products/Categories/' + category.image) }}" alt="{{ category.name }}" class="category-image">-->
                     <p class="category-name">{{ category.name }}</p>
                 </a>
@@ -185,9 +183,9 @@
 
         // New Autocomplete Logic
         $(document).ready(function() {
-    var coreIdentity = {{ core_identity|tojson|safe }};
-    var extendedCoreIdentity = {{ extended_core_identity|tojson|safe }};
-    var cleanedDescription = {{ cleaned_description|tojson|safe }};
+            var category = {{ category|tojson|safe }};
+            var brands = {{ brands|tojson|safe }};
+            var descriptions = {{ descriptions|tojson|safe }};
 
     $("#input-box").autocomplete({
         source: function(request, response) {
@@ -203,11 +201,11 @@
                 });
             }
 
-            var coreMatches = matchStartOfWord(coreIdentity);
-            var extendedMatches = matchStartOfWord(extendedCoreIdentity);
-            var descriptionMatches = matchStartOfWord(cleanedDescription);
+            var categoryMatches = matchStartOfWord(category);
+            var brandMatches = matchStartOfWord(brands);
+            var descriptionMatches = matchStartOfWord(descriptions);
 
-            var allMatches = [...new Set([...coreMatches, ...extendedMatches, ...descriptionMatches])];
+            var allMatches = [...new Set([...categoryMatches, ...brandMatches, ...descriptionMatches])];
             response(allMatches);
         },
         select: function(event, ui) {
@@ -248,9 +246,6 @@ document.getElementById("delivery").addEventListener("click", function() {
     // Additional logic for Delivery can be added here
 });
 
-function redirectToComingSoon() {
-        window.location.href = "{{ url_for('coming_soon') }}";
-    }
     </script>
 </body>
 </html>
