--- a/static/style.css
+++ b/static/style.css
@@ -797,6 +797,7 @@ nav .fa{
 .compare-results-page .hero {
     text-align: center;
     margin: 20px 0;
+    margin-top: 170px;
 }
 
 .compare-results-page .hero .hero-text {
