--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -107,7 +107,7 @@
     <!-- Footer section -->
     <section class="footer_pages">
         <h4>Contact Us</h4>
-        <p>Lorem ipsum</p>
+        <!--<p>Lorem ipsum</p>-->
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
