--- a/static/style.css
+++ b/static/style.css
@@ -512,6 +512,9 @@ nav .fa{
 /* Responsive styling adjustments for mobile devices */
 @media (max-width: 700px) {
     .subcategory2-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between; /* This will space out the items evenly */
         margin: 0 auto; /* Center the container */
         padding: 0 15px; /* Add padding to the left and right */
     }
@@ -522,6 +525,7 @@ nav .fa{
         padding: 13px; /* Optional padding for spacing between items */
         border-radius: 15px /*lower is more squary*/
     }
+    
 
     .subcategory2-image {
         width: 100%; /* Ensure the image takes the full width of its container */
