--- a/templates/landing.html
+++ b/templates/landing.html
@@ -81,7 +81,7 @@
            <div class="row">
                 <div class="feature">
                     <div class="image-container">
-                    <img src="{{ url_for('static', filename='images/feature1.png') }}">
+                    <img src="{{ url_for('static', filename='images/feature1_canva.png') }}">
                     </div>
                     <!--<div class="layer">SEE MINUTE 44</div> -->
                     <h3>Real-Time Price Comparison</h3>
@@ -89,14 +89,14 @@
                 </div>
                 <div class="feature">
                     <div class="image-container">
-                    <img src="{{ url_for('static', filename='images/feature2.png') }}">
+                    <img src="{{ url_for('static', filename='images/feature2_canva.png') }}">
                     </div>
                     <h3>Healthy Recipes & Substitutes</h3>
                     <p>Discover healthy recipes and find substitutes for better choices.</p>
                 </div>
                 <div class="feature">
                     <div class="image-container">
-                    <img src="{{ url_for('static', filename='images/feature3.png') }}">
+                    <img src="{{ url_for('static', filename='images/feature3_canva.png') }}">
                     </div>
                     <h3>Sustainability Badges</h3>
                     <p>Identify eco-friendly and sustainable products with our badges.</p>
