--- a/templates/landing.html
+++ b/templates/landing.html
@@ -96,11 +96,21 @@
                 </div>
                 <div class="feature">
                     <div class="image-container">
-                    <img src="{{ url_for('static', filename='images/feature3_canva.png') }}">
+                    <img src="{{ url_for('static', filename='images/feature3_canva_comingsoon.png') }}">
                     </div>
                     <h3>Sustainability Badges</h3>
                     <p>Identify eco-friendly and sustainable products with our badges.</p>
-                 </div>
+                </div>
+                <!--WITH AN ICON<div class="feature">
+                    <div class="image-container">
+                        <img src="{{ url_for('static', filename='images/feature3_canva.png') }}">
+                    </div>
+                    <div class="text-with-icon">
+                        <h3>Sustainability Badges</h3>
+                        <img src="{{ url_for('static', filename='images/coming_soon.png') }}" alt="Coming Soon" class="coming-soon-icon">
+                    </div>
+                    <p>Identify eco-friendly and sustainable products with our badges.</p>
+                </div>-->             
            </div>
         </section>
         <!-----SEE MINUTE 49 !!! --->
